Fixed ui sizing on mobile screens

--- a/api_app/static/api_app/css/notification.css
+++ b/api_app/static/api_app/css/notification.css
@@ -129,7 +129,7 @@
 
   .column {
     width: 100%;
-    margin-bottom: 50%;
+    margin-bottom: 15em;
     margin-left: 10%;
     margin-right: 10%;
 
